bug fixes
* won’t break on TV pages (displays nothing)
* stored movie title no longer contains HTML
* changes to ratings array previously were saved to storage but didn’t
follow from page to page until storage reload
* erase data works again
* importing raw data works again

--- a/styles.css
+++ b/styles.css
@@ -478,8 +478,8 @@ li a#star_a_0:hover {
 #critics_rows div.noratings { 
 	float: left;
 	width: 100%;
-	margin: 10px;
-	margin-right: 20px;
+	padding: 10px;
+	padding-right: 20px;
 	font-size: 12px;
 	text-align: left;
 }
